added text to header User story number ""

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    Type <h1>‘Hello World, this is stefansssssss testing’</h1>   
+    Type <h1>‘Hello World, this is stefans testing’ first commit !! :D </h1>   
 </body>
 </html>
